# OpenCV

./: CMakeLists.txt  Readme.md
cmake-modules/: FindOpenCV.cmake
include/: Chapter1.h  Chapter2.h  header.h
src/: Chapter1.cpp  Chapter2.cpp  main.cpp
